--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et molestiae perferendis quaerat amet hic doloremque, velit ex repudiandae quasi similique veritatis cumque neque enim tempore possimus non odit laboriosam corrupti.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="Front-end">
         </div>
     </section>
 
@@ -71,7 +71,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et molestiae perferendis quaerat amet hic doloremque, velit ex repudiandae quasi similique veritatis cumque neque enim tempore possimus non odit laboriosam corrupti.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Front-end">
         </div>
     </section>
 
@@ -83,7 +83,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et molestiae perferendis quaerat amet hic doloremque, velit ex repudiandae quasi similique veritatis cumque neque enim tempore possimus non odit laboriosam corrupti.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Front-end">
         </div>
     </section>
 
